--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="keywords" content="fashion, hairstyle, stylesheet">
     <link rel="shortcut icon" href="C:\Users\admin\Desktop\icon for site.png">
     <link rel="stylesheet" href="C:\Users\admin\Desktop\style naruto.css">
-    <title>the site about mode</title>
+    <title>the site about naruto</title>
   </head>
   <body>
 <h1 id="anchor"class="hgreen"><em>the site</em> </h1>
