--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta charset="utf-8">
     <link rel="shortcut icon" href="C:\Users\admin\Desktop\icon hairstyle.png">
     <link rel="stylesheet" href="C:\Users\admin\Desktop\style mushrooms.css">
-    <title>mushrooms</title>
+    <title>NEW SITE ABOUT MODE</title>
   </head>
   <body>
     <h1 id="room" class="hred bold">the site about honey mushrooms</h1>
